--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=result-management
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/rms
-spring.datasource.username=root
-spring.datasource.password=sk540
+spring.datasource.url=${TIDB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${TIDB_USER}
+spring.datasource.password=${TIDB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Hibernate + JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -18,8 +19,21 @@ spring.jpa.defer-datasource-initialization=false
 # Optional: Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
-
-
-
 logging.level.org.springframework.security=DEBUG
+server.port=8080
+server.address=0.0.0.0
+
+# Thymeleaf configuration
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+
+# File upload limits
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# If using H2 database (for testing)
 
