--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=result-management
 # MySQL Database Connection
-spring.datasource.url=${TIDB_URL}
+spring.datasource.url=${TIDB_URL:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${TIDB_USER}
 spring.datasource.password=${TIDB_PASSWORD}
